redactable/tests/ui/to_redacted_output_arbitrary_display_rejected.stderr
error[E0277]: the trait bound `DisplayOnly: ToRedactedOutput` is not satisfied
  --> tests/ui/to_redacted_output_arbitrary_display_rejected.rs:16:20
   |
16 |     require_output(&DisplayOnly);
   |     -------------- ^^^^^^^^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `ToRedactedOutput` is not implemented for `DisplayOnly`
  --> tests/ui/to_redacted_output_arbitrary_display_rejected.rs:5:1
   |
 5 | struct DisplayOnly;
   | ^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `ToRedactedOutput`:
             NotSensitiveDebug<T>
             NotSensitiveDisplay<T>
             NotSensitiveJson<'_, T>
             RedactedJson
             RedactedJsonRef<'_, T>
             RedactedOutput
             RedactedOutputRef<'_, T>
             SensitiveValue<T, P>
note: required by a bound in `require_output`
  --> tests/ui/to_redacted_output_arbitrary_display_rejected.rs:13:22
   |
13 | fn require_output<T: ToRedactedOutput>(_: &T) {}
   |                      ^^^^^^^^^^^^^^^^ required by this bound in `require_output`
